2004-05-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m: (-noteNumberOfRowsChanged)
	Made save against [_selectedRows lastIndex] returning NSNotFound.
	
2004-05-23  Quentin Mathe <qmathe@lub-internet.fr>

        * Source/NSWindow.m: Added a method -_windowView which returns the root 
	view (variable _wv) and replaced _contentView by _wv in the tracking
	implementation.
	* Source/NSControl.m: Modified to call the associated superclass method
	each time -mouseDown: is called to have the possibility to add behaviors
	to the related NSView method.
	Modifications needed to fully support toolbar validation mechanism.

2004-05-23  Quentin Mathe <qmathe@lub-internet.fr>
        
        * Source/GSToolbarView.m:
	* Headers/GNUstepGUI/GSToolbarView.h:
        * Source/GSToolbar.m:
	* Headers/GNUstepGUI/GSToolbar.h:
	* Source/NSToolbar.m:
	* Headers/AppKit/NSToolbar.h:
	* Source/NSToolbarItem.m:
	* Headers/AppKit/NSToolbarItem.h:
	* Source/NSWindow+Toolbar.m:
	Last part in the validation implementation, border taken in account by the 
	layout process, lot of memory leaks fixed, selected item possibility 
	implemented and other minor improvements.
	
2004-05-18  Quentin Mathe  <qmathe@club-internet.fr>

        * Source/GSToolbarView.m: Added color customization (default background
	color is now no color), part of the toolbar validation mechanism
	and other minor changes.
	* Headers/GNUstepGUI/GSToolbarView.h: Same.
	* Source/NSToolbarItem.m: Added part of the toolbar validation mechanism,
	new menuFormRepresentation implementation to have the menu item titles
	used as label with the text display mode and other minor changes.

2004-05-14  Adam Fedor  <fedor@gnu.org>

	* Source/NSDocumentController.m ([NSDocumentController -currentDirectory]): 
	Conform to the documentation. (Fixes #7900).

	* Tools/gsnd/gsnd.m: Rename variables starting with _, indent lines 
	properly (Fixes #7502).

2004-05-14  Serg Stoyan <stoyan@on.com.ua>
