@@ -1,3 +1,7 @@
+2004-05-27 01:39  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSImage.m (-size): Don't try to get the size if rep is nil.
+
 2004-05-25  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSTableView.m: (-noteNumberOfRowsChanged)
